<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_bg"
        />

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="24dp"
            android:layout_width="150dp"
            android:layout_height="150dp" />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="笔记宝"
            android:textColor="@color/mdtp_white"
            android:textSize="30sp"
            />

        <EditText
            android:id="@+id/accout_phone"
            android:hint="@string/accout_hint"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/bg_my_input"
            android:maxLength="11"
            android:inputType="phone"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="@dimen/common_margin"
            android:gravity="center_vertical|start"
            android:padding="15dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_my_input"
            >
            <EditText
                android:id="@+id/et_verification_code"
                android:hint="@string/verification_code"
                android:maxLength="6"
                android:background="@android:color/transparent"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:gravity="center_vertical|start"
                android:padding="15dp"
                android:singleLine="true"
                android:inputType="number"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />
            <Button
                android:id="@+id/btn_get_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="获取验证码"
                android:textColor="@color/white"
                android:background="@drawable/bg_blue_with_deep_blue_stroke"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/accout_pwd"
            android:hint="@string/pwd_setting_hint"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/bg_my_input"
            android:maxLength="11"
            android:inputType="textVisiblePassword"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="@dimen/common_margin"
            android:gravity="center_vertical|start"
            android:padding="15dp"
            />

        <EditText
            android:id="@+id/accout_username"
            android:hint="@string/accout_username"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/bg_my_input"
            android:maxLength="11"
            android:inputType="textVisiblePassword"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="@dimen/common_margin"
            android:gravity="center_vertical|start"
            android:padding="15dp"
            />

        <Button
            android:id="@+id/btn_register"
            android:text="@string/register_and_login"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/bg_blue_with_deep_blue_stroke"
            />

    </LinearLayout>

</RelativeLayout>